# project/storage/api-docs/api-docs.json
@@ -171,7 +171,7 @@
                 }
             }
         },
-        "/newsletters/destroy/{id}": {
+        "/api/newsletter/{id}": {
             "delete": {
                 "tags": [
                     "Newsletters"
@@ -207,6 +207,24 @@
                     },
                     "404": {
                         "description": "Resource Not Found"
+                    }
+                }
+            }
+        },
+        "/api/newsletters": {
+            "get": {
+                "tags": [
+                    "Newsletters"
+                ],
+                "summary": "Get the last five newsletters",
+                "description": "Get the last five newsletters",
+                "operationId": "lastFiveNewsletters",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid status value"
                     }
                 }
             }
